--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -41,7 +41,7 @@
 
       <footer class="site-footer">
         <span class="site-footer-owner">
-            &copy; Copyright Stanford Univeristy and The University of Texas at Austin 2020
+            &copy; Copyright The University of Texas at Austin and Stanford Univeristy 2021
         </span>
       </footer>
     </main>
