--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -32,7 +32,7 @@
       <h2 class="project-tagline">{{ page.project_tagline }}</h2>
       <a href="https://github.com/ARISE-Initiative/robosuite" class="btn">Code Release</a>
       <a href="{{ '/assets/whitepaper.pdf' | absolute_url }}" class="btn">White Paper</a>
-      <a href="/docs/overview.html" class="btn">Documentations</a>
+      <a href="/docs/overview.html" class="btn">Documentation</a>
       <a href="https://github.com/ARISE-Initiative" class="btn">ARISE Initiative</a>
     </header>
 
