update new members and v1.4 release

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,6 +67,11 @@ $body-link-color: #005f86;
   padding-right: 20px;
 }
 
+.col-xs-3 {
+  width: 20%;
+  padding-right: 20px;
+}
+
 .col-lg-12 {
     width: 100%;
 }
