fix broken URL for Ajay

--- a/_includes/founding_team.html
+++ b/_includes/founding_team.html
@@ -12,7 +12,7 @@
     </a>
   </div>
   <div class="col-xs-3 authornames">
-    <a href="http://web.stanford.edu/~amandlek/" align="middle">
+    <a href="https://ai.stanford.edu/~amandlek/" align="middle">
       <img src="assets/images/ajay_mandlek.png" class="img-circle img-responsive">
       Ajay Mandlekar
     </a>
