Update docs and add Kevin

--- a/_includes/core_members.html
+++ b/_includes/core_members.html
@@ -6,6 +6,12 @@
     </a>
   </div>
   <div class="col-xs-3 authornames">
+    <a href="https://kevin-thankyou-lin.github.io/" align="middle">
+      <img src="assets/images/kevin_lin.jpg" class="img-circle img-responsive">
+      Kevin Lin
+    </a>
+  </div>
+  <div class="col-xs-3 authornames">
     <a href="https://snasiriany.me/" align="middle">
       <img src="assets/images/soroush_nasiriany.png" class="img-circle img-responsive">
       Soroush Nasiriany
