test removing user for different shape

--- a/_includes/core_members.html
+++ b/_includes/core_members.html
@@ -5,12 +5,12 @@
       Abhishek Joshi
     </a>
   </div>
-  <div class="col-xs-3 authornames">
+  <!-- <div class="col-xs-3 authornames">
     <a href="https://kevin-thankyou-lin.github.io/" align="middle">
       <img src="assets/images/kevin_lin.jpg" class="img-circle img-responsive">
       Kevin Lin
     </a>
-  </div>
+  </div> -->
   <div class="col-xs-3 authornames">
     <a href="https://snasiriany.me/" align="middle">
       <img src="assets/images/soroush_nasiriany.png" class="img-circle img-responsive">
